--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/style.css
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/style.css
@@ -4,10 +4,11 @@
     font-family: "Poppins", sans-serif;
 }
 
-html::-webkit-scrollbar, body::-webkit-scrollbar {
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
     width: 0;
-  }
-  
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -65,7 +66,7 @@ body {
     margin-left: -75px;
 }
 
-.dashboard{
+.dashboard {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -73,12 +74,12 @@ body {
 
 }
 
-.continentSelect{
+.continentSelect {
     color: #ffffff;
     font-weight: bold;
 }
 
-.graficos1{
+.graficos1 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -89,7 +90,7 @@ body {
     margin-bottom: 6px;
 }
 
-.graficos2{
+.graficos2 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -111,7 +112,7 @@ body {
 }
 
 
-#continentSelect{
+#continentSelect {
     background-color: #8fe2de;
     color: #1d6d92;
     border-radius: 5px;
@@ -304,7 +305,7 @@ a {
     transform: scale(1.1);
 }
 
-.informaçoes p{
+.informaçoes p {
     font-weight: 700;
 }
 
@@ -369,7 +370,7 @@ a {
     font-weight: 700;
 }
 
-.quiz{
+.quiz {
     margin-bottom: 5px;
     margin-top: 15px;
 }
@@ -395,7 +396,7 @@ a {
 
 }
 
-.quantidade{
+.quantidade {
     margin: 0;
     margin-top: -25px;
     font-size: 12px;
@@ -491,7 +492,7 @@ h5 {
     background-attachment: fixed;
 }
 
-.btnCuri{
+.btnCuri {
     display: flex;
     width: 100%;
     flex-direction: row;
@@ -499,7 +500,7 @@ h5 {
     gap: 20px;
 }
 
-.contiCuri{
+.contiCuri {
     border: 1px solid #30aad2;
     border-radius: 10px;
     background-color: #8fe2de;
@@ -510,13 +511,13 @@ h5 {
 
 }
 
-.contiCuri:hover{
+.contiCuri:hover {
     background-color: #30aad2;
     border: 1px solid #8fe2de;
     color: #b2f0ed;
 }
 
-.imgc{
+.imgc {
     float: right;
     width: 20%;
     height: 80%;
@@ -527,7 +528,7 @@ h5 {
     margin-top: 1.5%;
 }
 
-.imgu{
+.imgu {
     float: right;
     width: 20%;
     height: 80%;
@@ -541,7 +542,7 @@ h5 {
     flex-direction: column;
 }
 
-.imge{
+.imge {
     float: left;
     width: 20%;
     height: 80%;
@@ -552,12 +553,12 @@ h5 {
     margin-top: 1.5%;
 }
 
-.h2c{
+.h2c {
     text-align: center;
     font-size: 23px;
 }
 
-.cur{
+.cur {
     border: 5px solid #30aad2;
     border-radius: 10px;
     background-color: rgb(197, 216, 235);
@@ -567,7 +568,7 @@ h5 {
 }
 
 
-.curiosidades{
+.curiosidades {
     color: white;
     display: flex;
     justify-content: center;
@@ -575,7 +576,7 @@ h5 {
     align-items: center;
 }
 
-.curiosidades p{
+.curiosidades p {
     color: #1d6d92;
     font-weight: 600;
     padding: 10px;
@@ -712,8 +713,7 @@ label {
     font-weight: 600;
 }
 
-input[type="text"],
-textarea {
+input[type="text"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -722,8 +722,30 @@ textarea {
     box-sizing: border-box;
 }
 
-input[type="email"],
+.formulario {
+    display: flex;
+    flex-direction: column;
+    margin: 50px;
+    justify-content: center;
+    width: -webkit-fill-available;
+}
+
+.dadosUsuario {
+    margin-bottom: 10px;
+    color: #00173a;
+    font-weight: 420;
+    text-align: left;
+}
+
 textarea {
+    border: 1px solid #0066ff;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    padding: 3px;
+}
+
+input[type="email"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -732,8 +754,7 @@ textarea {
     box-sizing: border-box;
 }
 
-input[type="password"],
-textarea {
+input[type="password"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -757,6 +778,16 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: #4693ff;
+}
+
+#tipoFeedback {
+    width: 100%;
+    height: 9.5%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    border: 1px solid #0066ff;
+    box-sizing: border-box;
 }
 
 .enviar {
