--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/style.css
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/style.css
@@ -77,6 +77,7 @@ body {
 .continentSelect {
     color: #ffffff;
     font-weight: bold;
+    font-size: 20px;
 }
 
 .graficos1 {
@@ -84,10 +85,12 @@ body {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    height: 45%;
+    height: 37%;
     gap: 100px;
     border-bottom: #ffffff 1px solid;
-    margin-bottom: 6px;
+    padding-bottom: 15px;
+    margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 .graficos2 {
@@ -95,19 +98,19 @@ body {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    height: 43.5%;
+    height: 37%;
 }
 
 .conteudodash {
     background: rgb(53, 169, 208);
     background: linear-gradient(90deg, rgba(53, 169, 208, 0.5) 0%, rgba(24, 126, 169, 0.5) 35%, rgba(0, 212, 255, 0.5) 100%), url('../Site/fundo3.png');
     width: 100%;
-    height: 102vh;
+    height: 130vh;
     display: flex;
     justify-content: center;
     overflow: hidden;
     background-size: cover;
-    background-position: center -150px;
+    background-position: center -10px;
     color: #ffffff;
 }
 
@@ -119,7 +122,9 @@ body {
     border: 2px solid #1d6d92;
     font-weight: 700;
     margin-left: 5px;
+    font-size: 15px;
 }
+
 
 .navbarinicio {
     color: #ffffff;
@@ -301,6 +306,26 @@ a {
 
 }
 
+.jogos {
+    margin: 30px;
+    height: 40vh;
+    width: 20vw;
+    background-color: rgb(197, 216, 235);
+    display: flex;
+    justify-content: center;
+    border: 3px solid #30aad2;
+    border-radius: 18px;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.3s;
+
+}
+
+.jogos:hover {
+    transform: scale(1.1);
+}
+
+
 .continentes:hover {
     transform: scale(1.1);
 }
@@ -345,13 +370,13 @@ a {
     }
 }
 
-.continentesp {
+.jogosp {
     margin: 30px;
     height: 40vh;
     width: 20vw;
     background-color: rgb(197, 216, 235);
     display: flex;
-    justify-content: start;
+    justify-content: center;
     border: 5px solid #30aad2;
     border-radius: 18px;
     flex-direction: column;
@@ -360,7 +385,7 @@ a {
     animation: mudarBorda 4s linear infinite;
 }
 
-.continentesp:hover {
+.jogossp:hover {
     transform: scale(1.2);
 }
 
@@ -372,7 +397,7 @@ a {
 
 .quiz {
     margin-bottom: 5px;
-    margin-top: 15px;
+    margin-top: -19px;
 }
 
 .cardimg {
@@ -480,7 +505,7 @@ h5 {
 
 .conteudocuriosidades {
     background: rgb(53, 169, 208);
-    background: linear-gradient(90deg, rgba(53, 169, 208, 0.6) 0%, rgba(24, 126, 169, 0.9) 35%, rgba(0, 212, 255, 0.6) 100%), url('./fundo3.jpg');
+    background: linear-gradient(90deg, rgba(53, 169, 208, 0.5) 0%, rgba(24, 126, 169, 0.5) 35%, rgba(0, 212, 255, 0.5) 100%), url('./fundo3.jpg');
     width: 100%;
     height: 130vh;
     display: flex;
@@ -489,7 +514,7 @@ h5 {
     background-size: cover;
     background-position: center -60px;
     flex-direction: column;
-    background-attachment: fixed;
+    background-attachment: scroll;
 }
 
 .btnCuri {
@@ -820,10 +845,8 @@ input[type="submit"]:hover {
     flex-direction: column;
     margin-bottom: 100px;
     flex: 1;
-    background-size: cover;
+    background-size: contain;
     background-position: center -30px;
-    background-attachment: fixed;
-
 }
 
 .chart {
