--- a/ProjetoIndividual-GeoTech/web-data-viz/public/css/styleinicio.css
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/css/styleinicio.css
@@ -438,13 +438,13 @@ h5 {
     background: rgb(53, 169, 208);
     background: linear-gradient(90deg, rgba(53, 169, 208, 0.6) 0%, rgba(24, 126, 169, 0.9) 35%, rgba(0, 212, 255, 0.6) 100%), url('../ProjetoIndividual-GeoTech/Site/fundo3.jpg');
     width: 100%;
-    height: 138vh;
+    height: 145vh;
     display: flex;
     justify-content: center;
     overflow: hidden;
     background-size: cover;
     background-position: center -60px;
-    background-attachment: fixed;
+    background-attachment: scroll;
 }
 
 .empresa {
