--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/style.css
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/style.css
@@ -341,6 +341,24 @@ a {
     }
 }
 
+@keyframes mudarTitulo {
+    0% {
+        color: rgb(0, 3, 165);
+    }
+
+    25% {
+        color: rgb(82, 229, 255);
+    }
+
+    50% {
+        color: rgb(45, 253, 45);
+    }
+
+    75% {
+        color: rgb(7, 78, 0);
+    }
+}
+
 @keyframes mudarCor {
     0% {
         color: rgb(8, 41, 184);
