--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/style.css
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/style.css
@@ -131,7 +131,7 @@ body {
     flex-direction: row;
     justify-content: space-evenly;
     width: 100%;
-    height: 39%;
+    height: 37%;
     gap: 100px;
     border-bottom: #ffffff 1px solid;
     padding-bottom: 15px;
@@ -144,12 +144,13 @@ body {
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
-    height: 40%;
+    height: 37%;
+    align-items: center;
 }
 
 .totalContatos{
-    width: 320px;
-    height: 320px;
+    width: 220px;
+    height: 220px;
     border: 5px solid #30aad2;
     border-radius: 10px;
     background-color: rgb(197, 216, 235);
@@ -159,7 +160,15 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    font-size: 24px;
+    font-size: 20px;
+}
+
+#qtdfeedback{
+    font-size: 35px;
+}
+
+#qtdcontato{
+    font-size: 35px;
 }
 
 
